--- a/assets/styles/freechecking.css
+++ b/assets/styles/freechecking.css
@@ -3,19 +3,21 @@ a,button{background:0 0}button,html{font-size:100%}a:active,a:focus,a:hover,butt
 
 html,
 body {
-	/*background: rgba(48, 49, 49, 1);*/
 	height: 100%;
 	margin: 0;
 	padding: 0;
-	/*position: relative;*/
 }
 
 body {
 	margin: 0 auto;
 	max-width: 1200px;
 	min-width: 1200px;
+	overflow-y: auto;
 }
 
+body.fixed {
+	overflow-y: hidden;
+}
 
 @font-face {
 	font-family: "glyphs";
@@ -133,8 +135,8 @@ button {
 	padding-left: 20px;
 	padding-right: 20px;
 	text-transform: uppercase;
-	-webkit-transition: .5s ease background;
-	transition: .5s ease background;
+	-webkit-transition: background .5s ease;
+	transition: background .5s ease;
 }
 
 button:hover {
@@ -147,6 +149,7 @@ button:hover {
 	float: left;
 	min-height: 540px;
 	max-height: 540px;
+	position: relative;
 	width: 100%;
 }
 
@@ -154,12 +157,16 @@ button:hover {
 	float: left;
 	margin-left: 10%;
 	margin-top: 25px;
+	position: relative;
+	z-index: 3;
 }
 
 nav {
 	float: right;
 	margin-right: 10%;
 	margin-top: 25px;
+	position: relative;
+	z-index: 3;
 }
 
 nav li {
@@ -175,20 +182,36 @@ nav li a,
 nav li div {
 	color: #ec8323;
 	text-decoration: none;
-	-webkit-transition: .5s ease color;
-	transition: .5s ease color;
+	-webkit-transition: color .5s ease;
+	transition: color .5s ease;
 }
 
 nav li a:hover,
 nav li div:hover {
-	color: #1c3664;
+	color: #1875bc;
 }
 
 nav li:first-child:after {
-	color: #1c3664;
+	color: #1875bc;
 	content: " | ";
 	margin-left: 8px;
 	margin-right: 13px;
+}
+
+nav li div.active {
+	color: #1875bc;
+	position: relative;
+}
+
+nav li div.active:after {
+	color: #1875bc;
+	content: "•";
+	font-size: 50px;
+	left: 0;
+	margin-top: 20px;
+	position: absolute;
+	text-align: center;
+	width: 100%;
 }
 
 
@@ -213,14 +236,14 @@ nav li:first-child:after {
 .email-address {
 	border: 1px solid #cccccb;
 	border-radius: 5px;
-	color: #a7a7a7;
+	color: #1c3664;
 	float: left;
 	font: 18px/32px "Helvetica-Neue-Thin", Arial;
 	outline: none;
 	padding-left: 15px;
 	padding-right: 15px;
-	-webkit-transition: .5s ease border;
-	transition: .5s ease border;
+	-webkit-transition: border .5s ease;
+	transition: border .5s ease;
 }
 
 .email-address:focus {
@@ -235,6 +258,130 @@ button {
 	float: left;
 	margin-left: 10px;
 }
+
+
+
+.free-checking-locate-branch {
+	background: #fff;
+	display: none;
+	height: 100%;
+	position: absolute;
+	width: 100%;
+}
+
+#map {
+	height: 90%;
+	margin-top: 100px;
+	position: absolute;
+	width: 100%;
+}
+
+
+.icon-target {
+	background-color: #fff;
+	border-radius: 5px;
+	bottom: 20px;
+	color: #1c3664;
+	font-size: 32px;
+	padding: 5px;
+	margin-right: 10px;
+	position: absolute;
+	z-index: 3;
+	right: 40%;
+}
+
+.search-container {
+	background: #fff;
+	float: right;
+	height: 100%;
+	height: calc(100% - 100px);
+	margin-top: 100px;
+	margin-right: 10%;
+	position: relative;
+	width: 30%;
+	z-index: 3;
+}
+
+.search-container form {
+	display: block;
+	height: 50px;
+}
+
+.icon-search {
+	color: #ec8323;
+	font-size: 22px;
+	position: absolute;
+	margin-right: 10px;
+	margin-top: 5px;
+	right: 10%;
+}
+
+.search-zip {
+	border: 1px solid #cccccb;
+	border-radius: 5px;
+	color: #1c3664;
+	font: 18px/32px "Helvetica-Neue-Thin", Arial;
+	margin: 0 10% 10px 10%;
+	outline: none;
+	padding-left: 15px;
+	padding-right: 15px;
+	-webkit-transition: border .5s ease;
+	transition: border .5s ease;
+	width: 80%;
+}
+
+.search-zip:focus {
+	border-color: #1b3564;
+}
+
+.search-results {
+	height: calc(100% - 50px);
+	overflow-y: auto;
+}
+
+.search-results ol {
+	float: left;
+	overflow-y: auto;
+	width: 100%;
+}
+
+.search-results li {
+	color: #1c3664;
+	cursor: pointer;
+	display: block;
+	font: 14px/17px "Helvetica-Neue-Thin", Arial;
+}
+
+.search-results ol li:hover {
+	background: #1875bc;
+}
+
+.search-results li p {
+	border-bottom: 1px solid #e3e3e3;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+
+.search-results ol li p:hover {
+	border-bottom-color: #1875bc;
+}
+
+.search-results ol li:hover p {
+	color: #fff;
+}
+
+.search-results ol li:last-child p {
+	border-bottom: 0;
+}
+
+
+
+
+
+
+
 
 .free-checking-account-goodies {
 	background: url("../images/free-checking-account-goodies-background.jpg");
@@ -271,7 +418,7 @@ button {
 .free-checking-account-options {
 	background: #f6f6f6;
 	float: left;
-	padding-bottom: 140px;
+	padding-bottom: 70px;
 	padding-top: 62px;
 	position: relative;
 	width: 100%;
@@ -355,6 +502,7 @@ button {
 }
 
 
+
 footer {
 	background: #ddd;
 	float: left;
@@ -364,7 +512,7 @@ footer {
 	width: 100%;
 }
 
-footer .wrapper {
+footer .legal-wrapper {
 	margin: 0 auto;
 	width: 80%;
 }
@@ -448,24 +596,36 @@ footer ul li span {
 }
 
 
-.sticky {
+
+
+.sticky-wrapper {
+	width: 100%;
+	position: relative;
+	float: left;
+	height: 70px;
+}
+
+.sticker {
 	background: #1775bc;
 	height: 100%;
 	max-height: 70px;
-	overflow: hidden;
-	position: absolute;
-	bottom: 0;
 	max-width: 1200px;
+	overflow: hidden;
 	width: 100%;
-	z-index: 2;
+	z-index: 4;
 }
 
-.wrapper {
+.sticker.fixed {
+	bottom: 0;
+	position: fixed;
+}
+
+.form-wrapper {
 	display: table;
 	margin: 0 auto;
 }
 
-.sticky p {
+.sticker p {
 	color: #fff;
 	display: table-cell;
 	cursor: default;
@@ -474,7 +634,60 @@ footer ul li span {
 	font: 18px/70px "Helvetica-Neue-Thin", Arial;
 }
 
-.sticky form {
+.sticker form {
 	display: table-cell;
 	vertical-align: middle;
+}
+
+
+
+
+
+.curtain {
+	background: rgba(0, 0, 0, .34);
+	display: none;
+	height: 100%;
+	left: 0;
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 5;
+}
+
+
+.iframe-wrapper {
+	background: #fff;
+	height: calc(100% - 10%);
+	margin: 5% auto 0;
+	overflow-y: auto;
+	position: relative;
+	width: 90%;
+}
+
+.iframe-wrapper iframe {
+	border: 0;
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 6;
+}
+
+.button-close {
+	color: #fff;
+	cursor: pointer;
+	font: 18px/22px "Helvetica-Neue-Thin", Arial;
+	margin-top: 20px;
+	padding: 20px;
+	position: absolute;
+	right: 5%;
+	top: 5%;
+	-webkit-transition: color .5s ease;
+	transition: color .5s ease;
+	z-index: 7;
+}
+
+.button-close:hover {
+	color: #0073c7;
 }
