--- a/assets/styles/freechecking.css
+++ b/assets/styles/freechecking.css
@@ -1,24 +1,6 @@
 /*! normalize.css v4.0.0 | MIT License | https: //github.com/ialphan/normalize.css */
 a,button{background:0 0}button,html{font-size:100%}a:active,a:focus,a:hover,button{outline:0}body,button[disabled],input[disabled]{cursor:default}button,input [type=reset],input input[type=submit],input[type=button]{appearance:button;cursor:pointer;overflow:visible}html,input[type=checkbox],input[type=radio]{box-sizing:border-box}button,fieldset,img,legend{border:0}body,button,fieldset,input,legend{margin:0}pre,textarea{overflow:auto}html{text-decoration:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-font-smoothing:antialiased;-webkit-tap-highlight-color:transparent;-webkit-text-size-adjust:100%}*,:after,:before{box-sizing:inherit}button{height:100%;line-height:normal;vertical-align:middle}fieldset{padding:0}hr{box-sizing:content-box;height:0}input{color:inherit;font:inherit;line-height:normal;padding:0}input[type=search]{appearance:textfield;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;appearance:none}legend{padding:0;white-space:normal}optgroup{color:inherit;font:inherit}pre{font-family:monospace,serif;margin:0}select,textarea{color:inherit;font:inherit;vertical-align:middle;margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block}blockquote,dd,dl,figure,form,menu,ol,p,ul{margin:0}b,strong{font-weight:700}audio,canvas,progress,video{display:inline;zoom:1}audio:not([controls]){display:none;height:0}h1,h2,h3,h4,h5,h6{font-size:1rem;margin:0}nav,ol,ul{list-style:none;padding:0}sub,sup{font-size:100%;line-height:0;position:relative;vertical-align:baseline}
 
-html,
-body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	margin: 0 auto;
-	max-width: 1200px;
-	min-width: 1200px;
-	overflow-y: auto;
-}
-
-body.fixed {
-	overflow-y: hidden;
-}
-
 @font-face {
 	font-family: "glyphs";
 	src: url(../fonts/glyphs.eot);
@@ -50,6 +32,24 @@ body.fixed {
 		url(../fonts/Helvetica-Neue.svg#Helvetica-Neue) format("svg");
 	font-style: normal;
 	font-weight: 400;
+}
+
+html,
+body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	margin: 0 auto;
+	max-width: 1200px;
+	min-width: 1200px;
+	overflow-y: auto;
+}
+
+body.fixed {
+	overflow-y: hidden;
 }
 
 [class^="icon-"], [class*=" icon-"] {
@@ -246,11 +246,11 @@ nav li div.active:after {
 	transition: border .5s ease;
 }
 
-.email-address:focus {
+input:focus {
 	border-color: #1b3564;
 }
 
-.email-address.invalid {
+input.invalid {
 	border-color: #ff0000;
 }
 
@@ -276,19 +276,36 @@ button {
 	width: 100%;
 }
 
-
 .icon-target {
 	background-color: #fff;
 	border-radius: 5px;
 	bottom: 20px;
 	color: #1c3664;
-	font-size: 32px;
+	cursor: pointer;
+	font-size: 24px;
 	padding: 5px;
 	margin-right: 10px;
 	position: absolute;
-	z-index: 3;
 	right: 40%;
+	-webkit-transition: color .25s ease;
+	transition: color .25s ease;
+	z-index: 3;
 }
+
+.icon-target:hover {
+	color: #ec8323;
+}
+
+.icon-target.disabled {
+	cursor: default;
+	opacity: .4;
+	pointer-events: none;
+}
+.icon-target.disabled:hover {
+	color: #1c3664;
+	opacity: .4;
+}
+
 
 .search-container {
 	background: #fff;
@@ -309,6 +326,7 @@ button {
 
 .icon-search {
 	color: #ec8323;
+	cursor: pointer;
 	font-size: 22px;
 	position: absolute;
 	margin-right: 10px;
@@ -345,7 +363,7 @@ button {
 	width: 100%;
 }
 
-.search-results li {
+.search-results ol li {
 	color: #1c3664;
 	cursor: pointer;
 	display: block;
@@ -356,8 +374,11 @@ button {
 	background: #1875bc;
 }
 
-.search-results li p {
+.search-results ol li p {
 	border-bottom: 1px solid #e3e3e3;
+	font-size: 14px;
+	font-family: "Helvetica-Neue", Arial;
+	line-height: 18px;
 	margin-left: 10%;
 	margin-right: 10%;
 	padding-bottom: 20px;
@@ -376,12 +397,55 @@ button {
 	border-bottom: 0;
 }
 
+.search-result-item .hidden {
+	display: none;
+}
+
+.hidden a,
+.button-back {
+	color: #ec8323;
+	text-decoration: none;
+	-webkit-transition: color .5s ease;
+	transition: color .5s ease;
+}
+
+.hidden a:hover,
+.button-back:hover {
+	color: #1875bc;
+}
+
+.search-result-item-detail {
+	display: none;
+	float: left;
+	overflow-y: auto;
+	width: 100%;
+}
+
+.search-result-item-detail p {
+	font-family: "Helvetica-Neue", Arial;
+	font-size: 14px;
+	line-height: 18px;
+	margin-left: 10%;
+	margin-right: 10%;
+	padding-bottom: 20px;
+	padding-top: 20px;
+}
+
+.branch-hours-day {
+	display: inline-block;
+	width: 100px;
+}
 
 
+.button-back {
+	cursor: pointer;
+	display: inline-block;
+	padding: 10px 10px 10px 0 !important;
+}
 
+.back-button:hover {
 
-
-
+}
 
 .free-checking-account-goodies {
 	background: url("../images/free-checking-account-goodies-background.jpg");
@@ -418,7 +482,6 @@ button {
 .free-checking-account-options {
 	background: #f6f6f6;
 	float: left;
-	padding-bottom: 70px;
 	padding-top: 62px;
 	position: relative;
 	width: 100%;
@@ -427,30 +490,34 @@ button {
 .free-checking-account-options h2{
 	float: right;
 	margin-bottom: 30px;
+	margin-right: 6%;
 	text-align: center;
-	width: 80%;
+	width: 60%;
 }
 
 .free-checking-account-options h2 + p {
 	float: right;
 	margin-bottom: 50px;
+	margin-right: 6%;
 	text-align: center;
-	width: 80%;
+	width: 60%;
 }
 
 .free-checking-account-options .table-header {
 	clear: left;
 	float: left;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .free-checking-account-options .column {
 	float: left;
 	text-align: center;
-	width: 22%;
+	width: 23%;
 }
 
 .free-checking-account-options .table-header .column {
-	padding: 0 40px;
+	padding: 0 10px;
 }
 
 .free-checking-account-options .table-header .column p {
@@ -459,7 +526,7 @@ button {
 }
 
 .free-checking-account-options .column:first-child {
-	width: 34%;
+	width: 31%;
 }
 
 .free-checking-account-options .column  h3 {
@@ -468,6 +535,8 @@ button {
 
 .free-checking-account-options .table-body {
 	clear: left;
+	margin-left: 10%;
+	margin-right: 10%;
 }
 
 .free-checking-account-options .table-body p {
@@ -479,7 +548,6 @@ button {
 
 .free-checking-account-options .table-body .column.first {
 	text-align: left;
-	text-indent: 40px;
 }
 
 .free-checking-account-options .table-body p:last-child {
@@ -599,10 +667,12 @@ footer ul li span {
 
 
 .sticky-wrapper {
-	width: 100%;
-	position: relative;
+	/*clear: left;*/
 	float: left;
 	height: 70px;
+	margin-top: 60px;
+	position: relative;
+	width: 100%;
 }
 
 .sticker {
@@ -682,7 +752,7 @@ footer ul li span {
 	padding: 20px;
 	position: absolute;
 	right: 5%;
-	top: 5%;
+	top: 50px;
 	-webkit-transition: color .5s ease;
 	transition: color .5s ease;
 	z-index: 7;
