--- a/assets/styles/freechecking.css
+++ b/assets/styles/freechecking.css
@@ -286,7 +286,7 @@ button {
 	padding: 5px;
 	margin-right: 10px;
 	position: absolute;
-	right: 40%;
+	right: 30%;
 	-webkit-transition: color .25s ease;
 	transition: color .25s ease;
 	z-index: 3;
@@ -308,12 +308,12 @@ button {
 
 
 .search-container {
-	background: #fff;
+	background: rgba(255, 255, 255, .8);
 	float: right;
 	height: 100%;
 	height: calc(100% - 100px);
 	margin-top: 100px;
-	margin-right: 10%;
+	margin-right: 0;
 	position: relative;
 	width: 30%;
 	z-index: 3;
@@ -330,7 +330,7 @@ button {
 	font-size: 22px;
 	position: absolute;
 	margin-right: 10px;
-	margin-top: 5px;
+	margin-top: 15px;
 	right: 10%;
 }
 
@@ -339,7 +339,7 @@ button {
 	border-radius: 5px;
 	color: #1c3664;
 	font: 18px/32px "Helvetica-Neue-Thin", Arial;
-	margin: 0 10% 10px 10%;
+	margin: 10px 10% 10px 10%;
 	outline: none;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -370,7 +370,8 @@ button {
 	font: 14px/17px "Helvetica-Neue-Thin", Arial;
 }
 
-.search-results ol li:hover {
+.search-results ol li:hover,
+.search-result-item.highlight {
 	background: #1875bc;
 }
 
@@ -385,11 +386,13 @@ button {
 	padding-top: 20px;
 }
 
-.search-results ol li p:hover {
+.search-results ol li p:hover,
+.search-result-item.highlight p {
 	border-bottom-color: #1875bc;
 }
 
-.search-results ol li:hover p {
+.search-results ol li:hover p,
+.search-result-item.highlight p {
 	color: #fff;
 }
 
@@ -728,7 +731,7 @@ footer ul li span {
 .iframe-wrapper {
 	background: #fff;
 	height: calc(100% - 10%);
-	margin: 5% auto 0;
+	margin: 50px auto 0;
 	overflow-y: auto;
 	position: relative;
 	width: 90%;
@@ -751,8 +754,8 @@ footer ul li span {
 	margin-top: 20px;
 	padding: 20px;
 	position: absolute;
-	right: 5%;
-	top: 50px;
+	right: 70px;
+	top: 35px;
 	-webkit-transition: color .5s ease;
 	transition: color .5s ease;
 	z-index: 7;
