--- a/assets/styles/freechecking.css
+++ b/assets/styles/freechecking.css
@@ -5,8 +5,8 @@ a,button{background:0 0}button,html{font-size:100%}a:active,a:focus,a:hover,butt
 	font-family: "glyphs";
 	src: url(../fonts/glyphs.eot);
 	src: url(../fonts/glyphs.eot?#iefix) format("embedded-opentype"),
-		url(../fonts/glyphs.woff) format("woff"),
-		url(../fonts/glyphs.ttf) format("truetype"),
+	url(../fonts/glyphs.woff) format("woff"),
+	 url(../fonts/glyphs.ttf) format("truetype"),
 		url(../fonts/glyphs.svg#Glyphs) format("svg");
 	font-style: normal;
 	font-weight: 400;
@@ -36,16 +36,15 @@ a,button{background:0 0}button,html{font-size:100%}a:active,a:focus,a:hover,butt
 
 html,
 body {
-	height: 100%;
+	/* height: 100%; */
 	margin: 0;
 	padding: 0;
 }
 
 body {
 	margin: 0 auto;
-	max-width: 1200px;
-	min-width: 1200px;
 	overflow-y: auto;
+	max-width: 1200px;
 }
 
 body.fixed {
@@ -65,7 +64,7 @@ body.fixed {
 }
 
 .icon-search:before {
-  content: "\e900";
+  content: "\e986";
 }
 .icon-target:before {
   content: "\e9b3";
@@ -80,10 +79,16 @@ body.fixed {
   content: "\ea9d";
 }
 .icon-check:before {
-  content: "\e901";
+  content: "\ea10";
 }
 .icon-close:before {
-  content: "\e902";
+  content: "\ea0f";
+}
+.icon-place:before {
+  content: "\e948";
+}
+.icon-phone:before {
+  content: "\e942";
 }
 
 h1 {
@@ -163,10 +168,14 @@ button:hover {
 
 nav {
 	float: right;
-	margin-right: 10%;
 	margin-top: 25px;
 	position: relative;
 	z-index: 3;
+	overflow: hidden;
+	/* width: 90px; */
+	/* left: 88%; */
+	padding-top: 4px;
+	margin-right: 10%;
 }
 
 nav li {
@@ -189,6 +198,7 @@ nav li div {
 nav li a:hover,
 nav li div:hover {
 	color: #1875bc;
+	color: transparent;
 }
 
 nav li:first-child:after {
@@ -205,7 +215,7 @@ nav li div.active {
 
 nav li div.active:after {
 	color: #1875bc;
-	content: "•";
+	content: "â€¢";
 	font-size: 50px;
 	left: 0;
 	margin-top: 20px;
@@ -286,7 +296,7 @@ button {
 	padding: 5px;
 	margin-right: 10px;
 	position: absolute;
-	right: 30%;
+	right: 40%;
 	-webkit-transition: color .25s ease;
 	transition: color .25s ease;
 	z-index: 3;
@@ -308,12 +318,12 @@ button {
 
 
 .search-container {
-	background: rgba(255, 255, 255, .8);
+	background: #fff;
 	float: right;
 	height: 100%;
 	height: calc(100% - 100px);
 	margin-top: 100px;
-	margin-right: 0;
+	margin-right: 10%;
 	position: relative;
 	width: 30%;
 	z-index: 3;
@@ -330,7 +340,7 @@ button {
 	font-size: 22px;
 	position: absolute;
 	margin-right: 10px;
-	margin-top: 15px;
+	margin-top: 5px;
 	right: 10%;
 }
 
@@ -339,7 +349,7 @@ button {
 	border-radius: 5px;
 	color: #1c3664;
 	font: 18px/32px "Helvetica-Neue-Thin", Arial;
-	margin: 10px 10% 10px 10%;
+	margin: 0 10% 10px 10%;
 	outline: none;
 	padding-left: 15px;
 	padding-right: 15px;
@@ -370,8 +380,7 @@ button {
 	font: 14px/17px "Helvetica-Neue-Thin", Arial;
 }
 
-.search-results ol li:hover,
-.search-result-item.highlight {
+.search-results ol li:hover {
 	background: #1875bc;
 }
 
@@ -386,13 +395,11 @@ button {
 	padding-top: 20px;
 }
 
-.search-results ol li p:hover,
-.search-result-item.highlight p {
+.search-results ol li p:hover {
 	border-bottom-color: #1875bc;
 }
 
-.search-results ol li:hover p,
-.search-result-item.highlight p {
+.search-results ol li:hover p {
 	color: #fff;
 }
 
@@ -731,7 +738,7 @@ footer ul li span {
 .iframe-wrapper {
 	background: #fff;
 	height: calc(100% - 10%);
-	margin: 50px auto 0;
+	margin: 5% auto 0;
 	overflow-y: auto;
 	position: relative;
 	width: 90%;
@@ -754,8 +761,8 @@ footer ul li span {
 	margin-top: 20px;
 	padding: 20px;
 	position: absolute;
-	right: 70px;
-	top: 35px;
+	right: 5%;
+	top: 50px;
 	-webkit-transition: color .5s ease;
 	transition: color .5s ease;
 	z-index: 7;
